--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Dropbox</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="debug">
 
+    <!-- inizio header -->
     <header>
         <div class="clearfix">
             <div class="nav-left">
+
                 <nav>
                     <li><a href="#"></a>1</li>
                     <li><a href="#"></a>2</li>
@@ -26,10 +28,10 @@
                     <li><a href="#"></a>6</li>
                     <li><a href="#"></a>6</li>
                 </nav>
-    
             </div>
         </div>
     </header>
+    <!-- fine header -->
     
 </body>
 </html>
