--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <header>
         <div class="clearfix">
             <div class="nav-left">
-
+                <img src="img/logo-small.png" alt="logo dropbox">
                 <nav>
-                    <li><a href="#"></a>1</li>
-                    <li><a href="#"></a>2</li>
-                    <li><a href="#"></a>3</li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
                 </nav>
             </div>
             
             <div class="nav-right">
                 <nav>
-                    <li><a href="#"></a>4</li>
-                    <li><a href="#"></a>5</li>
-                    <li><a href="#"></a>6</li>
-                    <li><a href="#"></a>6</li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
                 </nav>
             </div>
         </div>
