--- a/index.html
+++ b/index.html
@@ -36,5 +36,16 @@
     </header>
     <!-- fine header -->
     
+    <!-- inizio jumbotron -->
+     <section id="jumbotron">
+        <div class="container">
+            <div class="clearfix">
+                <h1>1</h1>
+                <div class="text-jumbo"></div>
+                <div class=""></div>
+            </div>
+        </div>
+     </section>
+    <!-- fine jumbotron -->
 </body>
 </html>
