--- a/index.html
+++ b/index.html
@@ -38,11 +38,22 @@
     
     <!-- inizio jumbotron -->
      <section id="jumbotron">
-        <div class="container">
+        <div class="container-jumbo">
             <div class="clearfix">
-                <h1>1</h1>
-                <div class="text-jumbo"></div>
-                <div class=""></div>
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="text-jumbo">
+                    <p>
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente
+                    </p>
+                    <div class="btn">
+                        Inizia la tua prova gratuita
+                    </div>
+                    <span>Annulla in qualsiasi momento</span>
+                    <span>Freccia</span>
+                </div>
+                <div class="img-jumbo">
+                    <img src="img/jumbo.png" alt="immagine jumbo">
+                </div>
             </div>
         </div>
      </section>
