completed jumbotron and fixed header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="debug">
 
@@ -46,10 +47,10 @@
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente
                     </p>
                     <div class="btn">
-                        Inizia la tua prova gratuita
+                        <a href="#">Inizia la prova gratuita</a>
                     </div>
                     <span>Annulla in qualsiasi momento</span>
-                    <span>Freccia</span>
+                    <span><i class="fas fa-arrow-down"></i></span>
                 </div>
                 <div class="img-jumbo">
                     <img src="img/jumbo.png" alt="immagine jumbo">
