created debug first section main

--- a/index.html
+++ b/index.html
@@ -59,5 +59,18 @@
         </div>
      </section>
     <!-- fine jumbotron -->
+
+    <!-- inizio main -->
+    <main>
+        <section>
+            <div class="container">
+                <div class="clearfix">
+                    <h2>Trova il piano Dropbox Business che fa per te</h2>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <!-- fine main -->
 </body>
 </html>
