--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
             <div class="nav-left">
                 <img src="img/logo-small.png" alt="logo dropbox">
                 <nav>
-                    <li><a href="#">Perchè Dopbox?</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e Prezzi</a></li>
+                    <ul>
+                        <li><a href="#">Perchè Dopbox?</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                        <li><a href="#">Piani e Prezzi</a></li>
+                    </ul>
                 </nav>
             </div>
             
             <div class="nav-right">
                 <nav>
-                    <li><a href="#">Supporto</a></li>
-                    <li><a href="#">Contatta l'ufficio vendite</a></li>
-                    <li><a href="#">Accedi</a></li>
-                    <li><a href="#">Inizia</a></li>
+                    <ul>
+                        <li><a href="#">Supporto</a></li>
+                        <li><a href="#">Contatta l'ufficio vendite</a></li>
+                        <li><a href="#">Accedi</a></li>
+                        <li><a href="#">Inizia</a></li>
+                    </ul>
                 </nav>
             </div>
         </div>
@@ -40,8 +44,8 @@
     <!-- inizio jumbotron -->
      <section id="jumbotron">
         <div class="container-jumbo">
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="clearfix">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="text-jumbo">
                     <p>
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente
@@ -62,15 +66,29 @@
 
     <!-- inizio main -->
     <main>
+        <!-- sezione titolo e fatturazione -->
         <section>
             <div class="container">
                 <div class="clearfix">
                     <h2>Trova il piano Dropbox Business che fa per te</h2>
+                    <ul class="bullet">
+                        <span></span>
+                        <li>Fatturazione mensile</li>
+                        <span></span>
+                        <li>Fatturazione annuale</li>
+                    </ul>
                 </div>
             </div>
         </section>
+        <!-- / sezione titolo e fatturazione -->
 
     </main>
     <!-- fine main -->
+
+    <!-- inizio footer -->
+    <footer>
+
+    </footer>
+    <!-- fine footer -->
 </body>
 </html>
