complete column section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <span><i class="far fa-user"></i> Singolo</span>
                         <ul class="typology">
                             <li><h3>Professional</h3></li>
-                            <li>19,99 &euro;</li>
+                            <li><strong>19,99 &euro;</strong></li>
                             <li>/mese</li>
                         </ul>
 
@@ -98,9 +98,9 @@
                             <li><i class="far fa-user"></i> 1 utente</li>
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
-                            <li class="btn">Prova gratis per 30 giorni</li>
-                            <li>oppure <a href="#">acquista ora</a></li>
-                            <li>______</li>
+                            <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
+                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>_________</li>
                         </ul>
                         
                         <ul class="specification">
@@ -116,20 +116,19 @@
 
                     <!-- seconda colonna standard -->
                     <div class="column central">
-                        <span><i class="far fa-user"></i> Singolo</span>
+                        <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
-                            <li>19,99 &euro;</li>
-                            <li>/utente /mese, a partire da 3 utenti</li>
+                            <li><strong>19,99 &euro;</strong></li>                            <li>/utente /mese, a partire da 3 utenti</li>
                         </ul>
 
                         <ul class="offer-includes">
                             <li><i class="fas fa-user-plus"></i> 1 utente</li>
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
-                            <li class="btn">Prova gratis per 30 giorni</li>
-                            <li>oppure <a href="#">acquista ora</a></li>
-                            <li>______</li>
+                            <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
+                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>_________</li>
                         </ul>
 
                         <ul class="specification">
@@ -146,20 +145,19 @@
 
                     <!-- terza colonna advanced -->
                     <div class="column">
-                        <span><i class="far fa-user"></i> Singolo</span>
+                        <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
-                            <li>19,99 &euro;</li>
-                            <li>/utente /mese, a partire da 3 utenti</li>
+                            <li><strong>19,99 &euro;</strong></li>                            <li>/utente /mese, a partire da 3 utenti</li>
                         </ul>
 
                         <ul class="offer-includes">
                             <li><i class="fas fa-user-plus"></i> 1 utente</li>
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
-                            <li class="btn">Prova gratis per 30 giorni</li>
-                            <li>oppure <a href="#">acquista ora</a></li>
-                            <li>______</li>
+                            <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
+                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>_________</li>
                         </ul>
 
                         <ul class="specification">
