completed section enterprise

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                 </div>
             </div>
         </section>
-        <!-- / sezione titolo e fatturazione -->
 
         <section>
             <div class="container">
@@ -91,7 +90,7 @@
                         <ul class="typology">
                             <li><h3>Professional</h3></li>
                             <li><strong>19,99 &euro;</strong></li>
-                            <li>/mese</li>
+                            <li class="grey">/mese</li>
                         </ul>
 
                         <ul class="offer-includes">
@@ -100,7 +99,7 @@
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
                             <li>oppure <a href="#" class="decoration">acquista ora</a></li>
-                            <li>_________</li>
+                            <li class="grey">_________</li>
                         </ul>
                         
                         <ul class="specification">
@@ -119,7 +118,8 @@
                         <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
-                            <li><strong>19,99 &euro;</strong></li>                            <li>/utente /mese, a partire da 3 utenti</li>
+                            <li><strong>19,99 &euro;</strong></li>                            
+                            <li class="grey">/utente /mese, a partire da 3 utenti</li>
                         </ul>
 
                         <ul class="offer-includes">
@@ -128,7 +128,7 @@
                             <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
                             <li>oppure <a href="#" class="decoration">acquista ora</a></li>
-                            <li>_________</li>
+                            <li class="grey">_________</li>
                         </ul>
 
                         <ul class="specification">
@@ -148,7 +148,8 @@
                         <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
-                            <li><strong>19,99 &euro;</strong></li>                            <li>/utente /mese, a partire da 3 utenti</li>
+                            <li><strong>19,99 &euro;</strong></li>                            
+                            <li class="grey">/utente /mese, a partire da 3 utenti</li>
                         </ul>
 
                         <ul class="offer-includes">
@@ -157,7 +158,7 @@
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
                             <li>oppure <a href="#" class="decoration">acquista ora</a></li>
-                            <li>_________</li>
+                            <li class="grey">_________</li>
                         </ul>
 
                         <ul class="specification">
@@ -174,7 +175,25 @@
                 </div>
             </div>
         </section>
+        <!-- sezione titolo e fatturazione -->
 
+        <!-- sezione enterprise -->
+        <section>
+            <div class="container">
+                <div class="clearfix">
+                    <div class="column enterprise">
+                        <span><i class="far fa-building"></i> Team</span>
+                        <ul class="typology">
+                            <li><h3>Enterprise</h3></li>
+                            <li class="btn"><a href="#">Contatta l'ufficio vendite</a></li>
+                            <li><strong>Contatta l'ufficio vendite per i prezzi</strong></li>
+                            <li>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- / sezione titolo e fatturazione -->
     </main>
     <!-- fine main -->
 
