fixed column height

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="clearfix">
                     <!-- prima colonna professional -->
-                    <div class="column">
+                    <div class="column height">
                         <span><i class="far fa-user"></i> Singolo</span>
                         <ul class="typology">
                             <li><h3>Professional</h3></li>
@@ -114,7 +114,7 @@
                     <!-- / prima colonna professional -->
 
                     <!-- seconda colonna standard -->
-                    <div class="column central">
+                    <div class="column height central">
                         <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
@@ -144,7 +144,7 @@
                     <!-- /seconda colonna standard -->
 
                     <!-- terza colonna advanced -->
-                    <div class="column">
+                    <div class="column height">
                         <span><i class="far fa-building"></i> Team</span>
                         <ul class="typology">
                             <li><h3>Standard</h3></li>
@@ -187,13 +187,30 @@
                             <li><h3>Enterprise</h3></li>
                             <li class="btn"><a href="#">Contatta l'ufficio vendite</a></li>
                             <li><strong>Contatta l'ufficio vendite per i prezzi</strong></li>
-                            <li>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</li>
+                            <li>
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
         <!-- / sezione titolo e fatturazione -->
+
+        <!-- sezione partner -->
+        <section>
+            <div class="container">
+                <div class="clearfix">
+                    <div class="img-partner">
+                        <img src="img/partner.png" alt="partner">
+                    </div>
+                    <div class="text-partner">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- / sezione partner -->
     </main>
     <!-- fine main -->
 
