debug section business

--- a/index.html
+++ b/index.html
@@ -210,6 +210,33 @@
             </div>
         </section>
         <!-- / sezione partner -->
+
+        <section class="business">
+            <div class="container">
+                <div class="clearfix">
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
+                    <div class="column">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>Dropbox Paper</span> direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column central">
+                        <img src="img/business-feature-switching-tools.png" alt="" class="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>Dropbox Paper</span> direttamente da Dropbox</p>
+                    </div>
+
+                    <div class="column">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e<span>Dropbox Paper</span>direttamente da Dropbox</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     <!-- fine main -->
 
