fixed width section faq

--- a/index.html
+++ b/index.html
@@ -335,18 +335,17 @@
             <div class="container clearfix">
                 <h2>Domande frequenti</h2>
                 <ul>
-                    <li>Quale è la differenza tra Dropbox Business Advanced?</li>
+                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
                     <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Advanced?</li>
+                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
                     <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Advanced?</li>
+                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
                     <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Advanced?</li>
+                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
                     <li><i class="fas fa-chevron-down"></i></li>
                     <li></li>
                 </ul>
             </div>
-
         </section>
 
 
