--- a/index.html
+++ b/index.html
@@ -347,18 +347,64 @@
                 </ul>
             </div>
         </section>
-
-
-           
-
-            
-
     </main>
     <!-- fine main -->
 
     <!-- inizio footer -->
     <footer>
-
+        <div class="container-jumbo">
+            <div class=" top-footer clearfix">
+                <nav>
+                    <ul>
+                        <li><a href="#"></a>Dropbox</li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"></a>Prodotti</li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"></a>Azienda</li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"></a>Supporto</li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"></a>Community</li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="bottom-footer">
+                <span>
+                     <i class="fas fa-globe-americas"></i> 
+                     Italiano 
+                     <i class="fas fa-sort-up"></i>
+                </span>
+            </div>
+        </div>
     </footer>
     <!-- fine footer -->
 </body>
