Insert images for language menu

--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
                 </nav>
             </div>
             <div class="bottom-footer">
-                <span>
-                     <i class="fas fa-globe-americas"></i> 
+                <a href="#">
+                    <i class="fas fa-globe-americas"></i> 
                      Italiano 
                      <i class="fas fa-sort-up"></i>
-                </span>
+                </a>
             </div>
         </div>
     </footer>
