fixed rules a link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
-                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>oppure <a href="#" >acquista ora</a></li>
                             <li class="grey">_________</li>
                         </ul>
                         
@@ -126,7 +126,7 @@
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
-                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>oppure <a href="#">acquista ora</a></li>
                             <li class="grey">_________</li>
                         </ul>
 
@@ -156,7 +156,7 @@
                             <li>3 TB di spazio di archiviazione sicuro</li>
                             <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             <li class="btn"> <a href="#">Prova gratis per 30 giorni</a></li>
-                            <li>oppure <a href="#" class="decoration">acquista ora</a></li>
+                            <li>oppure <a href="#">acquista ora</a></li>
                             <li class="grey">_________</li>
                         </ul>
 
@@ -204,7 +204,7 @@
                     <div class="text-partner">
                         <h3>Entra in contatto con un partner Dropbox</h3>
                         <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione ,gestione e supporto continui.</p>
-                        <a href="" class="btn white">Trova un partner</a>
+                        <a href="" class="white">Trova un partner</a>
                     </div>
                 </div>
             </div>
@@ -268,7 +268,7 @@
             <div class="container">
                 <div class="small">
                     <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-                    <a href="#" class="decoration">Scopri di più sui nostri clienti</a>
+                    <a href="#">Scopri di più sui nostri clienti</a>
                 </div>
             </div>
             
@@ -324,7 +324,7 @@
                             <h2>Porta Dropbox Business nella tua azienda</h2>
                         </div>
                         <div class="free-btn">
-                            <a href="#" class="btn white">Iniza la tua prova gratuita</a>
+                            <a href="#" class="white">Iniza la tua prova gratuita</a>
                         </div>
                     </div>
                 </div>
@@ -398,11 +398,22 @@
                 </nav>
             </div>
             <div class="bottom-footer">
-                <a href="#">
-                    <i class="fas fa-globe-americas"></i> 
-                     Italiano 
-                     <i class="fas fa-sort-up"></i>
-                </a>
+                <div class="clearfix">
+                    <div class="language">
+                        <i class="fas fa-globe-americas"></i>
+                        <a href="#">Italiano</a>
+                        <i class="fas fa-sort-up"></i>
+                    </div>
+                </div>
+
+                <div class="language-menu">
+                    <!-- <nav>
+                        <li><img src="img/united_kingdom_flags_flag_17079.png" alt=""> English (United Kingdom)</li>
+                        <li><img src="img/germany_flags_flag_17001.png" alt=""> Deutsch</li>
+                        <li><img src="img/spain_flags_flag_17068.png" alt=""> Español (Latinoamérica)</li>
+                    </nav> -->
+                </div>
+
             </div>
         </div>
     </footer>
