created bonus faq

--- a/index.html
+++ b/index.html
@@ -335,15 +335,24 @@
             <div class="container clearfix">
                 <h2>Domande frequenti</h2>
                 <ul>
-                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                    <li>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                    <li></li>
+                    <li class="visible">Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
+                    <li class="visible"><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                    <li class="hidden"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptas quasi quae quibusdam ipsa ea iste laudantium voluptates obcaecati odio eius, ex expedita dicta veritatis atque aspernatur, nemo modi fugiat.</li>
+                    <li class="hidden"></li>
+                    <li class="visible">Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
+                    <li class="visible"><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                    <li class="hidden"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptas quasi quae quibusdam ipsa ea iste laudantium voluptates obcaecati odio eius, ex expedita dicta veritatis atque aspernatur, nemo modi fugiat.</li>
+                    <li class="hidden"></li>
+                    <li class="visible">Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
+                    <li class="visible"><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                    <li class="hidden"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptas quasi quae quibusdam ipsa ea iste laudantium voluptates obcaecati odio eius, ex expedita dicta veritatis atque aspernatur, nemo modi fugiat.</li>
+                    <li class="hidden"></li>
+                    <li class="visible">Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li>
+                    <li class="visible"><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                    <li class="hidden"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptas quasi quae quibusdam ipsa ea iste laudantium voluptates obcaecati odio eius, ex expedita dicta veritatis atque aspernatur, nemo modi fugiat.</li>
+                    <li class="hidden"></li>
+                    <li class="visible"></li>
+                    <li class="visible"></li>
                 </ul>
             </div>
         </section>
@@ -353,6 +362,7 @@
     <!-- inizio footer -->
     <footer>
         <div class="container-jumbo">
+            <!-- top footer -->
             <div class=" top-footer clearfix">
                 <nav>
                     <ul>
@@ -397,24 +407,17 @@
                     </ul>
                 </nav>
             </div>
+            <!-- / top footer -->
+
+            
             <div class="bottom-footer">
-                <div class="clearfix">
                     <div class="language">
                         <i class="fas fa-globe-americas"></i>
                         <a href="#">Italiano</a>
                         <i class="fas fa-sort-up"></i>
                     </div>
-                </div>
-
-                <div class="language-menu">
-                    <!-- <nav>
-                        <li><img src="img/united_kingdom_flags_flag_17079.png" alt=""> English (United Kingdom)</li>
-                        <li><img src="img/germany_flags_flag_17001.png" alt=""> Deutsch</li>
-                        <li><img src="img/spain_flags_flag_17068.png" alt=""> Español (Latinoamérica)</li>
-                    </nav> -->
-                </div>
-
             </div>
+            <!-- / bottom footer -->
         </div>
     </footer>
     <!-- fine footer -->
